--- a/css/main.css
+++ b/css/main.css
@@ -9,11 +9,45 @@ main .content {
 main .generator {
   margin-top: 24px;
 }
+main .generator .input {
+  position: relative;
+}
 main .generator .input textarea {
   width: 100%;
   height: 300px;
   padding: 16px;
 }
+main .generator .input .copy {
+  padding: 16px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background-color: #000000;
+  color: #fff;
+}
+main .generator .input .copy:hover {
+  cursor: pointer;
+}
 main .generator .buttons {
   margin-top: 24px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+main .generator .buttons .tab {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
+  border: 1px solid #767677;
+  transition: all 300ms ease;
+  height: 40px;
+}
+main .generator .buttons .tab:hover {
+  background-color: #ebedee;
+  border: 1px solid #000000;
+  cursor: pointer;
+}
+main .generator .buttons .tab.active {
+  background-color: #000000;
+  color: #fff;
 }
