--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,9 @@ main .content {
 main .generator {
   margin-top: 24px;
 }
+main .generator .empty {
+  display: none;
+}
 main .generator .input {
   position: relative;
 }
@@ -18,6 +21,7 @@ main .generator .input textarea {
   padding: 16px;
 }
 main .generator .input .copy {
+  display: none;
   padding: 16px;
   position: absolute;
   right: 0;
