--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -19,6 +19,10 @@ main {
   .generator {
     margin-top: 24px;
 
+    .empty {
+      display: none;
+    }
+
     .input {
       position: relative;
 
@@ -28,6 +32,7 @@ main {
         padding: 16px;
       }
       .copy {
+        display: none;
         padding: 16px;
         position: absolute;
         right: 0;
