--- a/css/main.css
+++ b/css/main.css
@@ -41,13 +41,9 @@ main .generator .buttons {
   padding-bottom: 8px;
 }
 main .generator .buttons .tab {
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding: 16px;
   border: 1px solid #767677;
   transition: all 300ms ease;
-  height: 40px;
 }
 main .generator .buttons .tab:hover {
   background-color: #ebedee;
