--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -53,13 +53,9 @@ main {
       padding-bottom: 8px;
 
       .tab {
-        padding-top: 8px;
-        padding-bottom: 8px;
-        padding-left: 16px;
-        padding-right: 16px;
+        padding: 16px;
         border: 1px solid $color-dark-grey;
         transition: all 300ms ease;
-        height: 40px;
 
         &:hover {
           background-color: $color-light-grey;
